# go/api/openapi.yaml
@@ -65,7 +65,7 @@ paths:
         - access-token
         - jwt
       security:
-        - BearerAuthElevated: []
+        - BearerAuth: []
       requestBody:
         content:
           application/json:
@@ -482,11 +482,6 @@ components:
           format: int64
         refreshToken:
           description: Refresh token during authentication or when refreshing the JWT
-          example: 2c35b6f3-c4b9-48e3-978a-d4d0f1d42e24
-          pattern: \b[0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12}\b
-          type: string
-        refreshTokenId:
-          description: The refresh token ID
           example: 2c35b6f3-c4b9-48e3-978a-d4d0f1d42e24
           pattern: \b[0-9a-f]{8}\b-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-\b[0-9a-f]{12}\b
           type: string
