# go/controller/post_signup_webauthn_verify.go
@@ -199,7 +199,6 @@ func (ctrl *Controller) postSignupWebauthnVerifyWithoutEmailVerificationOrUserDi
 			AccessToken:          accessToken,
 			AccessTokenExpiresIn: expiresIn,
 			RefreshToken:         refreshToken.String(),
-			RefreshTokenId:       refreshToken.String(),
 			User:                 user,
 		},
 	}, nil
